--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 :root {
-    --color-primary: #FBB349;
-    --color-primary-hover: #d1881a;
+    --color-primary: #f1bc4a;
+    --color-primary-hover: #f78606;
     --color-secondary: #8fd7e0;
     --color-bg-2: #e0e0e0;
     --color-white: #FFF;
@@ -24,7 +24,8 @@ body {
 /* ------------header styles ------------ */
 
 header {
-    background-color: var(--color-primary);
+    /* background-color: var(--color-primary); */
+    background: linear-gradient(var(--color-primary-hover), var(--color-primary));
     height: 80px;
     width: 100%;
 }
@@ -102,7 +103,8 @@ a.active, .menu li a:hover {
     font-size: 25px;
     color: var(--color-white);
     padding: 5px 15px;
-    background: var(--color-primary);
+    /* background: var(--color-primary); */
+    background: linear-gradient(var(--color-primary-hover), var(--color-primary));
     border-radius: 8px;
     border-radius: 8px;
     border: 3px solid var(--color-white);
@@ -126,7 +128,7 @@ a.active, .menu li a:hover {
     color: var(--color-white);
     padding: 5px 15px;
     margin-top: -15px;
-    background: var(--color-primary);
+    background: linear-gradient(var(--color-primary-hover), var(--color-primary));
     border-radius: 5px;
     position: relative;
     z-index: 10;
@@ -175,7 +177,7 @@ a.active, .menu li a:hover {
 
 /* ------------SERVICES styles ------------ */
 .services {
-    background-color: var(--color-primary);
+    background: linear-gradient(var(--color-primary-hover), var(--color-primary));
     padding: 20px 0;
 }
 .services .col {
@@ -303,7 +305,7 @@ a.active, .menu li a:hover {
 
 /* ------------CONTACT ------------ */
 .contact {
-    background-color: var(--color-primary);
+    background: linear-gradient(var(--color-primary-hover), var(--color-primary));
     padding: 30px 15px 20px 15px;
     font-size: 21px;
     text-align: center;
