--- a/css/styles.css
+++ b/css/styles.css
@@ -1,367 +1,396 @@
 :root {
-    --color-primary: #f1bc4a;
-    --color-primary-hover: #f78606;
-    --color-secondary: #8fd7e0;
-    --color-bg-2: #e0e0e0;
-    --color-white: #FFF;
-    --color-black: #000;
-    --font: 'Alata', sans-serif;
-    --base-color: rgba(255, 255, 255, 1);
-    --hover-color: rgba(220, 120, 150, 1);
+  --color-primary: #f1bc4a;
+  --color-primary-hover: #f78606;
+  --color-secondary: #8fd7e0;
+  --color-bg-2: #e0e0e0;
+  --color-white: #fff;
+  --color-black: #000;
+  --font: 'Alata', sans-serif;
+  --base-color: rgba(255, 255, 255, 1);
+  --hover-color: rgba(220, 120, 150, 1);
 }
 * {
-    padding: 0;
-    margin: 0;
-    text-decoration: none;
-    list-style: none;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  text-decoration: none;
+  list-style: none;
+  box-sizing: border-box;
 }
 body {
-    font-family: var(--font);
-    /* background-color: var(--color-secondary); */
+  font-family: var(--font);
+  /* background-color: var(--color-secondary); */
 }
 
 /* ------------header styles ------------ */
 
 header {
-    /* background-color: var(--color-primary); */
-    background: linear-gradient(var(--color-primary-hover), var(--color-primary));
-    height: 80px;
-    width: 100%;
+  /* background-color: var(--color-primary); */
+  background: linear-gradient(var(--color-primary-hover), var(--color-primary));
+  height: 80px;
+  width: 100%;
+}
+.logo-menu .container {
+  width: 100%;
+  max-width: 1100px;
+  margin: 0 auto;
 }
 .logo-menu .container .row {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
 }
 .logo {
-    margin-left: 20px;
+  margin-left: 20px;
 }
-.logo span{
-    color: var(--color-white);
-    font-size: 20px;
-    padding: 5px 10px 5px 5px;
-    border-radius: 3px;
-    display: flex;
+.logo span {
+  color: var(--color-white);
+  font-size: 20px;
+  padding: 5px 10px 5px 5px;
+  border-radius: 3px;
+  display: flex;
 }
 .logo img {
-    margin: auto 5px;
-    padding: 0 5px;
+  margin: auto 5px;
+  padding: 0 5px;
 }
 .menu {
-    display: flex;
+  display: flex;
 }
 .menu li {
-    margin-right: 10px;
-    line-height: 80px;
-    font-size: 18px;
+  margin-right: 10px;
+  line-height: 80px;
+  font-size: 18px;
 }
 .menu li a {
-    color: var(--color-white);
-    padding: 5px 10px;
-    border-radius: 3px;
+  color: var(--color-white);
+  padding: 5px 10px;
+  border-radius: 3px;
 }
-a.active, .menu li a:hover {
-    background: var(--color-primary-hover);
+a.active,
+.menu li a:hover {
+  background: var(--color-primary-hover);
 }
-@media screen and (max-width: 678px){
-    header {
-        height: auto;
-    }
-    .logo-menu .container .row {
-        justify-content: center;
-        padding-top: 20px;
-    }
+@media screen and (max-width: 678px) {
+  header {
+    height: auto;
+  }
+  .logo-menu .container .row {
+    justify-content: center;
+    padding-top: 20px;
+  }
 }
 /* ------------End header styles ------------ */
 
-
 /* ------------Main styles ------------ */
 .main {
-    background-color: var(--color-secondary);
-    padding-bottom: 30px;
+  background-color: var(--color-secondary);
+  padding-bottom: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.main .container {
+  width: 100%;
+  max-width: 1100px;
+  margin: 0 auto;
 }
 .main .col {
-    width: 100%;
-    text-align: center;
+  width: 100%;
+  text-align: center;
 }
 .main .col img {
-    padding-top: 20px;
-    width: 70%;
+  padding-top: 20px;
+  width: 70%;
 }
 .main_details {
-    padding: 10px 20px;
-    color: var(--color-black);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  padding: 10px 20px;
+  color: var(--color-black);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .main_details h2 {
-    width: 80%;
-    text-transform: uppercase;
-    font-size: 25px;
-    color: var(--color-white);
-    padding: 5px 15px;
-    /* background: var(--color-primary); */
-    background: linear-gradient(var(--color-primary-hover), var(--color-primary));
-    border-radius: 8px;
-    border-radius: 8px;
-    border: 3px solid var(--color-white);
-    box-shadow: 1px 1px 2px 2px rgb(199, 199, 199);
-    position: relative;
-    z-index: 10;
+  width: 80%;
+  text-transform: uppercase;
+  font-size: 25px;
+  color: var(--color-white);
+  padding: 5px 15px;
+  /* background: var(--color-primary); */
+  background: linear-gradient(var(--color-primary-hover), var(--color-primary));
+  border-radius: 8px;
+  border-radius: 8px;
+  border: 3px solid var(--color-white);
+  box-shadow: 1px 1px 2px 2px rgb(199, 199, 199);
+  position: relative;
+  z-index: 10;
 }
 .main_details p {
-    width: auto;
-    margin-top: -15px;
-    /* text-transform: uppercase; */
-    font-size: 15px;
-    padding: 25px 15px 25px 15px;
-    background: var(--color-white);
-    border-radius: 8px;
+  width: auto;
+  margin-top: -15px;
+  /* text-transform: uppercase; */
+  font-size: 15px;
+  padding: 25px 15px 25px 15px;
+  background: var(--color-white);
+  border-radius: 8px;
 }
 .btn {
-    width: 50%;
-    text-transform: uppercase;
-    font-size: 18px;
-    color: var(--color-white);
-    padding: 5px 15px;
-    margin-top: -15px;
-    background: linear-gradient(var(--color-primary-hover), var(--color-primary));
-    border-radius: 5px;
-    position: relative;
-    z-index: 10;
-    cursor: pointer;
-    border-radius: 8px;
-    border: 3px solid var(--color-white);
-    box-shadow: 1px 1px 2px 2px rgb(199, 199, 199);
+  width: 50%;
+  text-transform: uppercase;
+  font-size: 18px;
+  color: var(--color-white);
+  padding: 5px 15px;
+  margin-top: -15px;
+  background: linear-gradient(var(--color-primary-hover), var(--color-primary));
+  border-radius: 5px;
+  position: relative;
+  z-index: 10;
+  cursor: pointer;
+  border-radius: 8px;
+  border: 3px solid var(--color-white);
+  box-shadow: 1px 1px 2px 2px rgb(199, 199, 199);
 }
 .btn:hover {
-    background: var(--color-primary-hover);
+  background: var(--color-primary-hover);
 }
 @media (min-width: 678px) {
-    .main .col {
-        width: 48%;
-    }
-    .main .row {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 25px 0;
-    }
-    .main_details h2 {
-        width: 50%;
-        font-size: 30px;
-    }
-    .main_details p{
-        width: 80%;
-        padding-top: 50px;
-        padding-bottom: 50px;
-        font-size: 23px;
-    }
-    .main_details{
-        display: flex;
-        height: 80%;
-    }
-    .btn {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 25px;
-        width: 35%;
-        height: 80px;
-    }
+  .main .col {
+    width: 48%;
+  }
+  .main .container {
+    height: calc(100vh - 80px);
+  }
+  .main .row {
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    padding: 25px 0;
+  }
+  .main_details h2 {
+    width: 70%;
+    font-size: 30px;
+  }
+  .main_details p {
+    width: 100%;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    font-size: 23px;
+  }
+  .main_details {
+    display: flex;
+    height: 80%;
+  }
+  .btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    width: 50%;
+    height: 80px;
+  }
 }
 /* ------------End Main styles ------------ */
 
 /* ------------SERVICES styles ------------ */
 .services {
-    background: linear-gradient(var(--color-primary-hover), var(--color-primary));
-    padding: 20px 0;
+  background: linear-gradient(var(--color-primary-hover), var(--color-primary));
+  padding: 20px 0;
 }
 .services .col {
-    width: 100%;
-    text-align: center;
+  width: 100%;
+  text-align: center;
 }
-.services .container{
-    text-align: center;
-    justify-content: center;
+.services .container {
+  text-align: center;
+  justify-content: center;
 }
 .services__title {
-    width: 60%;
-    margin: 0 auto;
-    text-transform: uppercase;
-    font-size: 30px;
-    color: var(--color-white);
-    padding: 5px 15px;
-    border-radius: 8px;
-    border: 3px solid var(--color-white);
-    position: relative;
-    z-index: 10;
-    margin-bottom: 5px;
+  width: 70%;
+  margin: 0 auto;
+  text-transform: uppercase;
+  font-size: 30px;
+  color: var(--color-white);
+  padding: 5px 15px;
+  border-radius: 8px;
+  border: 3px solid var(--color-white);
+  position: relative;
+  z-index: 10;
+  margin-bottom: 5px;
 }
-.services__intro{
-    width: 90%;
-    margin: 0 auto;
-    padding: 10px;
-    color: var(--color-white);
-    font-size: 18px;
+.services__intro {
+  width: 90%;
+  margin: 0 auto;
+  padding: 10px;
+  color: var(--color-white);
+  font-size: 18px;
 }
 .services_details {
-    width: 100%;
-    padding: 10px 20px;
-    color: var(--color-black);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  width: 100%;
+  padding: 10px 20px;
+  color: var(--color-black);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .services_details h2 {
-    width: 80%;
-    text-transform: uppercase;
-    font-size: 23px;
-    color: var(--color-black);
-    padding: 5px 15px;
-    background: var(--color-secondary);
-    border-radius: 8px;
-    border: 3px solid var(--color-white);
-    box-shadow: 1px 1px 2px 2px rgb(199, 199, 199);
-    position: relative;
-    z-index: 10;
+  width: 80%;
+  text-transform: uppercase;
+  font-size: 23px;
+  color: var(--color-black);
+  padding: 5px 15px;
+  background: var(--color-secondary);
+  border-radius: 8px;
+  border: 3px solid var(--color-white);
+  box-shadow: 1px 1px 2px 2px rgb(199, 199, 199);
+  position: relative;
+  z-index: 10;
 }
 .service_details-text {
-    text-align: left;
-    width: 90%;
-    margin-top: -15px;
-    font-size: 15px;
-    padding: 25px 2px 25px 2px;
-    background: var(--color-white);
-    border-radius: 8px;
+  text-align: left;
+  width: 90%;
+  margin-top: -15px;
+  font-size: 15px;
+  padding: 25px 2px 25px 2px;
+  background: var(--color-white);
+  border-radius: 8px;
 }
 .service_details-text ol {
-    width: 95%;
-    margin: 0 auto;
+  width: 95%;
+  margin: 0 auto;
 }
 .service_details-text li {
-    list-style: inside;
+  list-style: inside;
 }
-@media (min-width: 678px){
-    .services{
-        padding: 30px 0;
-    }
-    .services .row {
-        display: flex;
-    }
-    .services__title{
-        width: 30%;
-        font-size: 50px;
-    }
-    .services__intro{
-        font-size: 25px;
-    }
-    .services_details h2{
-        width: 50%;
-    }
-    .service_details-text{
-        width: 70%;
-        min-height: 230px;
-        font-size: 20px;
-    }
+@media (min-width: 678px) {
+  .services {
+    padding: 30px 0;
+  }
+  .services .container {
+    margin: 100px auto;
+  }
+  .services .row {
+    display: flex;
+  }
+  .services__title {
+    width: 80%;
+    font-size: 50px;
+    margin-bottom: 30px;
+  }
+  .services__intro {
+    font-size: 25px;
+  }
+  .services_details h2 {
+    width: 50%;
+  }
+  .service_details-text {
+    width: 70%;
+    min-height: 230px;
+    font-size: 20px;
+  }
+}
+@media screen and (min-width: 900px) {
+  .services__title {
+    width: 40%;
+  }
 }
 
 /* ------------END SERVICES styles ------------ */
 
-
 /* ------------CLIENTS ------------ */
 .clients {
-    background-color: var(--color-secondary);
-    padding-top: 30px;
-    padding-bottom: 45px;
+  background-color: var(--color-secondary);
+  padding-top: 30px;
+  padding-bottom: 45px;
 }
-.clients .container{
-    text-align: center;
-    justify-content: center;
+.clients .container {
+  text-align: center;
+  justify-content: center;
 }
 .gallery {
-    background: var(--color-secondary);
-  }
-  
-  .gallery-cell {
-    width: 100%;
-    height: 250px;
-    margin-right: 10px;
-  }
-  .gallery-cell img {
-      width: 100%;
-  }
-  
-  @media (min-width: 678px){
-    .gallery-cell{
-        height: 600px;
-    }
-  }
-/* ------------end CLIENTS ------------ */
+  background: var(--color-secondary);
+}
 
+.gallery-cell {
+  width: 100%;
+  height: 250px;
+  margin-right: 10px;
+}
+.gallery-cell img {
+  width: 100%;
+}
+
+@media (min-width: 678px) {
+  .gallery-cell {
+    height: 600px;
+  }
+  .clients .container {
+    margin: 100px auto;
+  }
+  .services__intro {
+    margin-bottom: 30px;
+  }
+}
+/* ------------end CLIENTS ------------ */
 
 /* ------------CONTACT ------------ */
 .contact {
-    background: linear-gradient(var(--color-primary-hover), var(--color-primary));
-    padding: 30px 15px 20px 15px;
-    font-size: 21px;
-    text-align: center;
-    height: auto;
+  background: linear-gradient(var(--color-primary-hover), var(--color-primary));
+  padding: 30px 15px 20px 15px;
+  font-size: 21px;
+  text-align: center;
+  height: auto;
 }
 .contact h2 {
-    color: var(--color-white);
-    margin-bottom: 20px;
-    font-size: 30px;
+  color: var(--color-white);
+  margin-bottom: 20px;
+  font-size: 30px;
 }
-.contact a{
+.contact a {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  color: white;
+  margin: 0 10px 30px 10px;
+}
+@media (min-width: 678px) {
+  .contact {
+    height: 250px;
     display: flex;
-    flex-direction: column;
-    text-align: center;
-    color:  white;
-    margin: 0 10px 30px 10px;
-}
-@media (min-width: 678px){
-    .contact{
-        height: 250px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 20px 15px 20px 15px;
-    }
-    .contact .container{
-        width: 100%;
-    }
-    .social-links{
-        display: flex;
-        justify-content: center;
-    }
-    .contact a{
-        width: 30%;
-        margin: 0 10px 0px 10px;
-
-    }
+    align-items: center;
+    justify-content: center;
+    padding: 20px 15px 20px 15px;
+  }
+  .contact .container {
+    width: 100%;
+  }
+  .social-links {
+    display: flex;
+    justify-content: center;
+  }
+  .contact a {
+    width: 30%;
+    margin: 0 10px 0px 10px;
+  }
 }
 /* ------------end CONTACT ------------ */
 
 /* ------------Footer ------------ */
-footer{
-    height: auto;
-    background-color: var(--color-black);
-    text-align: center;
-    border: 1px transparent;
+footer {
+  height: auto;
+  background-color: var(--color-black);
+  text-align: center;
+  border: 1px transparent;
 }
-footer p{
-    font-size: 10px;
-    color: var(--color-white);
-    line-height: 50px;
+footer p {
+  font-size: 10px;
+  color: var(--color-white);
+  line-height: 50px;
 }
-@media (min-width: 678px){
-    footer p{
-        font-size: 15px;
-    }
+@media (min-width: 678px) {
+  footer p {
+    font-size: 15px;
+  }
 }
 
 /* ------------end Footer ------------ */
